crud add manager id to user table. User creation by manager - set all user fields. Update user by manager implementation. Implementation of access middleware - it checks is authenticated user have access to the current operation.
